--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-community/all-modules": "^22.0.0",
+    "@ag-grid-community/react": "^22.0.0",
     "ag-grid": "^18.1.2",
     "ag-grid-react": "^22.0.0",
     "bootstrap": "^4.3.1",
