--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ag-grid-community/all-modules": "^22.0.0",
     "@ag-grid-community/react": "^22.0.0",
     "ag-grid": "^18.1.2",
+    "ag-grid-enterprise-free": "^20.2.0",
     "ag-grid-react": "^22.0.0",
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
