--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ag-grid": "^18.1.2",
     "ag-grid-enterprise-free": "^20.2.0",
     "ag-grid-react": "^22.0.0",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
