--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ag-grid-react": "^22.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "npm": "^5.6.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
