--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ag-grid-react": "^22.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "lodash": "^4.17.21",
     "npm": "^5.6.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.1.1",
+    "prop-types": "^15.7.2"
   }
 }
