--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm": "^5.6.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^16.10.2",
     "react-dom-factories": "^1.0.2",
     "react-icons": "^3.8.0",
